--- a/latex/ch6.tex
+++ b/latex/ch6.tex
@@ -90,7 +90,7 @@ By contrast, the logarithmic scale takes the total number of frequency bins as a
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=\textwidth]{./images-freqscales/log_vs_oct.png}
+	\includegraphics[width=0.9375\textwidth]{./images-freqscales/log_vs_oct.png}
 	\caption{The octave and log scales compared. The minimum frequency for both scales is set to $\xi_{\text{min}}$ = 82.41 Hz, which is the frequency of the $E2$ musical note. The maximum frequency for both scales is set to $\xi_{\text{max}}$ = 7,902.13 Hz, which is the frequency of the $B8$ musical note. Note that both scales are identical. The octave scale uses $B = 3 \text{ bpo}$, resulting in $K = 21 \text{ frequency bins}$, from equation \eqref{equation:bpo1}. The log scale uses 21 frequency bins.}
 	\label{fig:octvlog}
 \end{figure}
