Remove references item spacing

--- a/latex/report.tex
+++ b/latex/report.tex
@@ -36,6 +36,7 @@
 \renewcommand{\floatpagefraction}{0.75}
 \usepackage[backend=biber,authordate,annotation,ibidtracker=false]{biblatex-chicago}
 \addbibresource{citations.bib}
+\setlength{\bibitemsep}{0}
 \input{variables.tex}
 
 \DefineBibliographyStrings{english}{%
