Work on CIRMMT poster

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1635,3 +1635,11 @@ publisher = {MIT Press},
   number={1},
   pages={1--10}
 }
+
+@article{xumxslicq,
+  title={Music demixing with the sliCQ transform},
+  author={Hanssian, Sevag},
+  year={2021},
+  journal={arXiv preprint arXiv:2112.05509},
+  pages={1--3},
+}
