Store generated cirmmt poster

--- a/latex/poster.tex
+++ b/latex/poster.tex
@@ -44,7 +44,7 @@
 	\begin{block}{Time-frequency resolution: STFT, sliCQT, and human auditory system}
 	  \begin{enumerate}
 		  \item
-			  The Fourier transform represents the spectrum of audio as a sum of infinite sinusoids; interesting audio (e.g., music, speech) have spectra that change with time
+			  The Fourier transform represents the spectrum of audio as a sum of infinite sinusoids; interesting sounds (e.g., music, speech) have spectra that change with time
 		  \item
 			  Short-Time Fourier Transform (STFT) or Gabor transform,\footnotemark\ take the spectrum of consecutive, overlapping, finite-duration, fixed-size windowed frames of the audio signal
 		  \item
