Get it compiling again

--- a/latex/report.tex
+++ b/latex/report.tex
@@ -36,7 +36,7 @@
 \renewcommand{\floatpagefraction}{0.75}
 \usepackage[backend=biber,authordate,annotation,ibidtracker=false]{biblatex-chicago}
 \addbibresource{citations.bib}
-\setlength{\bibitemsep}{0}
+\setlength{\bibitemsep}{0pt}
 \input{variables.tex}
 
 \DefineBibliographyStrings{english}{%
